# os2r-superbuild

./: .gitignore  CMakeLists.txt  README.md  index.html
docs/sphinx/: .gitignore  CMakeLists.txt  conf.py  gym-os2r-real_index.rst  index.rst  monopod_sdk_index.rst  scenario_monopod_index1.rst
docs/sphinx/bibtex/: refs.bib
docs/sphinx/gym-os2r-real_docs/python/gym-os2r-real/: gym_os2r_real.runtimes.rst
docs/sphinx/gym-os2r_docs/python/gym-os2r/: gym_os2r.rst
docs/sphinx/introduction/what/: what_sim.rst  what_sim2real.rst
docs/sphinx/monopod_sdk/: CMakeLists.txt  conf.py  index.html  index.rst
docs/sphinx/monopod_sdk/xml/: classblmc__drivers_1_1DeviceInterface.xml
docs/sphinx/monopod_sdk_docs/: index.rst  index0.rst  install.rst
docs/sphinx/monopod_sdk_docs/blmc_drivers_docs/: blmc_drivers.rst  homing.rst  index.rst
docs/sphinx/monopod_sdk_docs/getting_started/: index.rst
docs/sphinx/monopod_sdk_docs/getting_started/blmc_drivers/: introduction.rst
docs/sphinx/monopod_sdk_docs/getting_started/monopod_drivers/: homing.rst  introduction.rst
docs/sphinx/monopod_sdk_docs/monopod_drivers_docs/: index.rst  monopod_drivers.rst
docs/sphinx/monopod_sdk_docs/xml/: can__bus_8hpp.xml  classblmc__drivers_1_1AnalogSensor.xml  classblmc__drivers_1_1AnalogSensorInterface.xml  classblmc__drivers_1_1BlmcJointModule.xml  classblmc__drivers_1_1BlmcJointModules.xml  classblmc__drivers_1_1CanBus.xml  classblmc__drivers_1_1CanBusConnection.xml  classblmc__drivers_1_1CanBusFrame.xml  classblmc__drivers_1_1CanBusInterface.xml  classblmc__drivers_1_1CanBusMotorBoard.xml  classblmc__drivers_1_1Motor.xml  classblmc__drivers_1_1MotorBoardCommand.xml  classblmc__drivers_1_1MotorBoardInterface.xml  classblmc__drivers_1_1MotorBoardStatus.xml  classblmc__drivers_1_1MotorInterface.xml  classblmc__drivers_1_1Polynome.xml  classblmc__drivers_1_1SafeMotor.xml  classblmc__drivers_1_1SerialReader.xml  classblmc__drivers_1_1TimePolynome.xml  classmonopod__drivers_1_1EncoderInterface.xml  classmonopod__drivers_1_1Leg.xml  classmonopod__drivers_1_1Monopod.xml  classmonopod__drivers_1_1Planarizer.xml  deprecated.xml  device__interface_8hpp.xml  dir_00e9ac52157f8b47e0f62711376e4fb1.xml  dir_03d823ee877bf4048935fabb675d239d.xml  dir_1ac08f5593942ae8d8b9ea3ccfffccc9.xml  dir_2ac94ae005b32fb86a69b3d452a71b89.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_6851bcda45acfc2e72afed48180266f9.xml  dir_786cc21328ac71e18262753f28c7c6b6.xml  dir_7d380fef97ae856075aed8812cfa53ca.xml  dir_8f49dd062eda24395df599c5385a3cb1.xml  dir_a6d8ebd260b9f3d50a2ebb4cf36d0c53.xml  dir_aebb8dcc11953d78e620bbef0b9e2183.xml  dir_b30d693e3184df559304c75f75f6ac7e.xml  dir_e9e7563bc244c528b70f65290971864a.xml  encoder_8hpp.xml  index.xml  (+19 more)
docs/sphinx/open_sim2real/build_your_own/: getting_started.rst  intro.rst
docs/sphinx/open_sim2real/build_your_own/hardware/: index.rst
docs/sphinx/open_sim2real/build_your_own/robot/: index.rst
docs/sphinx/open_sim2real/build_your_own/software/: index.rst  superbuild.rst
docs/sphinx/open_sim2real/build_your_own/superbuild/: index.rst  install.rst
docs/sphinx/open_sim2real/getting_started/: copyright_and_license.rst  how_to_cite.rst  platform.rst  roadmap.rst  sim2real.rst  sld.rst
docs/sphinx/open_sim2real/getting_started/highlevel_architecture/: index.rst  sld.rst
docs/sphinx/open_sim2real/getting_started/what/: index.rst  what_is_opensim2real.rst  what_open_sim2real.rst  what_real.rst  what_sim.rst  what_sim2real.rst
docs/sphinx/open_sim2real/getting_started/why/: index.rst  why_open_sim2real.rst  why_opensim2real.rst  why_sim2real.rst
docs/sphinx/open_sim2real/how/: getting_started.rst
docs/sphinx/open_sim2real/how/hardware/: index.rst
docs/sphinx/open_sim2real/how/software/: index.rst
docs/sphinx/open_sim2real/physical_monopod/: building_monopod.rst  future_development.rst  introduction.rst  quick_start.rst
docs/sphinx/open_sim2real/physical_monopod/hardware_documentation/: basic_tests_leg.rst  basic_tests_pivot.rst  bom.rst  build_instructions_leg.rst  build_instructions_pivot.rst  build_requirements.rst  index.rst  index2.rst  leg_pivot_integration.rst  leg_pivot_integration_testing.rst  monopod_firmware.rst  monopod_resources.rst
docs/sphinx/open_sim2real/physical_monopod/how-to-guides/: establish_connection.rst  index.rst  setup_rt_kernel.rst
docs/sphinx/open_sim2real/physical_monopod/monopod/: build_instructions.rst  build_requirements.rst  how_to_test.rst  index.rst
docs/sphinx/open_sim2real/physical_monopod/software_documentation/: gym_os2r.rst  index.rst  monopod_sdk.rst  scenario_monopod.rst
docs/sphinx/open_sim2real/physical_monopod/superbuild/: index.rst  os2r-superbuild.dot  superbuild_installation.rst  superbuild_structure.rst  support_policy.rst
docs/sphinx/open_sim2real/physical_monopod/tutorials/: index.rst  minimal_gym.rst  setup.rst  using_scenario_monopod.rst  using_sdk.rst
docs/sphinx/open_sim2real/shared/: ignition_gazebo.rst
docs/sphinx/open_sim2real/simulated_monopod/: future_development.rst  next_steps.rst  quick_start.rst  training_on_cloud.rst
docs/sphinx/open_sim2real/simulated_monopod/how-to-guides/: custom_config.rst  custom_reward.rst  index.rst
docs/sphinx/open_sim2real/simulated_monopod/installation/: developer_installation.rst  index.rst  singularity_container.rst  (+1 more)
docs/sphinx/open_sim2real/simulation_only/: developer_install.rst  index.rst  install.rst  intro.rst  singularity_container.rst  support_policy.rst  user_install.rst
docs/sphinx/open_sim2real/what/: index.rst  what_monopod.rst  what_real.rst  what_sim.rst  what_sim2real.rst
docs/sphinx/open_sim2real/why/: index.rst  why_monopod.rst  why_open_sim2real.rst  why_sim2real.rst
docs/sphinx/scenario_monopod_docs/: index0.rst
docs/sphinx/scenario_monopod_docs/xml/: Joint_8h.xml  Model_8h.xml  classscenario_1_1monopod_1_1Joint.xml  classscenario_1_1monopod_1_1Model.xml  dir_2751bd11a0aff6f7a5ba83845de65d0a.xml  dir_3b4192a2a1a650b95197036b8fe82862.xml  dir_7b6c73e35c541c2db869af0428194660.xml  dir_d3b99199a42fa34b23ee49c051470cee.xml  namespacescenario.xml
(+769 files in other folders)
